# Cpp-Works

./: .gitignore
For_people/Ulia_Sukhanova/2021.05 Labs/Recursive_determinant/: CMakeLists.txt  Lab_4.docx  Menu.cpp  Menu.h  Read_and_prepare_data.cpp  Read_and_prepare_data.h  Read_data.cpp  Read_data.h  Recursive_determinant.cpp  Recursive_determinant.h  Solver.cpp  Solver.h  Test.cpp  Test.h  main.cpp
For_people/Ulia_Sukhanova/2021.05 Labs/String-qSort/: CMakeLists.txt  Lab_2.docx  Mass_task.cpp  Mass_task.h  Mass_task.xml  Mass_task_solution.xlsx  Menu.cpp  Menu.h  QSort.cpp  QSort.h  String-qSort.rar  StringsHolder.cpp  StringsHolder.h  Test.cpp  Test.h  main.cpp  ~$Lab_2.docx  ~WRL0003.tmp
UrFU/Stochastic/Labs/: CMakeLists.txt  Calc Expectation, Variance and Covariance.h  Randomize.cpp  Randomize.h  Write_functions.cpp  Write_functions.h  main.cpp
UrFU/Stochastic/Labs/Lab_1/: Lab_1.cpp  Lab_1.h
UrFU/Stochastic/Labs/Lab_1/Matlab calc/: correlations.m  graph11.m  histograms.m  histograms_Mer.m  inaccuracy.m
UrFU/Stochastic/Labs/Lab_1/data/: Cor.txt  Cor2N.txt  Cor2N_Mer.txt  Cor_Mer.txt  E.txt  E_Mer.txt  Inaccuracy.txt  Inaccuracy_Mer.txt  V.txt  V_Mer.txt
UrFU/Stochastic/Labs/Lab_2/: Lab_2.cpp  Lab_2.h
UrFU/Stochastic/Labs/Lab_2/MatLab/: MKerror.m  MKmean.m  histogram_my.m  name.m
UrFU/Stochastic/Labs/Lab_2/data/: g_integral.txt  g_integral_inaccuracy.txt
UrFU/Stochastic/Labs/Lab_3/: Lab_3.cpp  Lab_3.h
UrFU/Stochastic/Labs/Lab_3/Matlab/: All_inaccuracy.m  E_and_V_12.m  E_and_V_BM.m  E_and_V_normal.m  Hist_Box_Mueller.m  Hist_method12.m  Hist_normal.m  Inaccuracy_normal.m  drawExpectation.m  drawHist.m  drawInaccuracy.m  drawVariance.m  inaccuracy_BM.m  inaccuracy_m12.m  mean_square_deviation.m  normal_density_function.m  std_Normal.m
UrFU/Stochastic/Labs/Lab_4/: Lab_4.cpp  Lab_4.h
UrFU/Stochastic/Labs/Lab_4/Matlab/: ColorNoise.m  corellationT_tau.m  draw.m  drawCorrelation.m  drawExpectation.asv  drawExpectation.m  drawNoise_Time.m  drawVariance.m
UrFU/Stochastic/Labs/Lab_5/: Lab_5.cpp  Lab_5.h
UrFU/Stochastic/Labs/Lab_5/Matlab/: CloudFHN.m  CloudFHN_ellipse.m  CloudFHN_ellipse_eps_for_param_a.m  Eigenvalues.m  ISI.m  Modeling_param_a_for_eps.m  PhaseFHN.m  STOCH_Phase_FHN.m  STOCH_trajectoryFHN.m  TrajectoryFHN.m  eigVectorMinus.m  eigVectorPlus.m  eigenvalueMinus.m  eigenvaluePlus.m
UrFU/Stochastic/Labs/Support/: Calc_Expectation_Variance_Covariance.h  Random_engine.h  Randomize.cpp  Randomize.h  Write_functions.cpp  Write_functions.h
UrFU/Stochastic/Ryashko/Homework/: CMakeLists.txt  main.cpp
UrFU/Stochastic/Ryashko/Homework/Distributions_test/: Normal.cpp  Normal.h  Uniform.cpp  Uniform.h
(+106 files in other folders)
